# calibpy

./: .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
calibpy/: __init__.py
calibpy/domain/: __init__.py  error.py  model.py
calibpy/usecase/: __init__.py  error.py  interactor.py  log.py  model.py
t/usecase/: test_interactor.py  test_model.py
