[tool.poetry]
name = "calibpy"
version = "0.1.0"
description = "Library for Clean Archtecture written in python"
authors = ["kentac55 <dev.kentac55@gmail.com>"]
license = "MIT"
include = ["src/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pylint = "^2.6.2"
isort = "^5.7.0"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
coverage = "^5.4"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.coverage.run]
parallel = true
